Changing title in html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>Temperature in SF Line Chart with D3.js!</title>
+  	<title>Stack Overflow Survey Data Visualisation using D3.js</title>
     <link rel="stlesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js" ></script>
   </head>
